[package]
name = "primitive"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
num-traits = "0.2"
thiserror = "1"

[dev-dependencies]
crossbeam = "0.8"
indexmap = "2"
lockfree-object-pool = "0.1"
slotmap = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = []
nightly = []
