[package]
name = "primitive"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
atomic-memcpy = "0.2"
num-traits = "0.2"
thiserror = "2"

[dev-dependencies]
ahash = "0.8"
crossbeam = "0.8"
hashbrown = "0.15"
indexmap = "2"
lockfree-object-pool = "0.1"
lru = "0.14"
slotmap = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = []
nightly = []

[profile.profiling]
inherits = "release"
debug = true
